--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+ 
+
+.box{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 12px;
+  cursor: pointer;
+}
+.btn{
+  /* height: 30px; */
+  padding: 0px 15px 2px 15px;
+}
+.btn_add{
+  padding: 1px 44px 0px 35px;
+  border: 1px solid black;
+  height: 30px
+}
+.height{
+  /* width: 250px; */
+  height: 33px;
+}
+.bg_clr{
+  background-color: #16c188;
+}
+.bg{
+  background-color: #16c188;
+  border-radius: 20px;
+}
